--- a/.github/workflows/deployment1.yaml
+++ b/.github/workflows/deployment1.yaml
@@ -1,3 +1,4 @@
+# One job
 name: Deployment Exercise 1
 on: push
 jobs:
@@ -18,6 +19,6 @@ jobs:
         
       - name: Build code
         run: npm run build
-        
+
       - name: Deploy code
         run: echo "Deploying..."
